home page carousel 90% done, just need to fix the images so they aren't stretched, but it's working

--- a/src/components/Classes/Classes.css
+++ b/src/components/Classes/Classes.css
@@ -27,7 +27,7 @@
 }
 
 .class-show-content-card {
-  width: 350px;
+  width: 550px;
   height: 100%;
   border: 1pt solid black;
   padding: 20px 20px;
